hphp/test/slow/reified_generics/call-user-func-1.php.expectf
Fatal error: <int> does not exist on the reified generics table in %s on line 5
